# phonebook-hallucinations

./: .gitignore  phonebook.jsonl  phonebook.pkl  pyproject.toml  tokenizer.model  tokenizer.vocab
hallucinations_memory_safety/: data.py  model.py  train.py
phonebook-hallucinations/: data.py  train.py
phonebook_hallucinations/: data.py  model.py  train.py
wandb/: latest-run
wandb/run-20240330_011926-cjvtnl0j/: run-cjvtnl0j.wandb
wandb/run-20240330_011926-cjvtnl0j/files/: config.yaml  phonebook_transformer_0_0.pt  wandb-metadata.json  wandb-summary.json
wandb/run-20240330_012201-xipxw70w/: run-xipxw70w.wandb
wandb/run-20240330_012201-xipxw70w/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240330_012842-mcs5qpbd/: run-mcs5qpbd.wandb
wandb/run-20240330_012842-mcs5qpbd/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
